--- a/app/assets/css/global.css
+++ b/app/assets/css/global.css
@@ -1,5 +1,19 @@
 :root {
+  --color-background: beige;
+}
+:root.light {
   --color-primary: green;
   --color-secondary: orange;
   --color-accent: blue;
+}
+:root.dark {
+  --color-background: gray;
+  --color-primary: aqua;
+  --color-secondary: beige;
+  --color-accent: red;
+}
+
+body {
+  background-color: var(--color-background);
+  transition: background-color 300ms ease-in-out;
 }
