styles(): Control scroll element, first child of main element (used for infiniteScroll)

--- a/app/assets/css/global.scss
+++ b/app/assets/css/global.scss
@@ -1,6 +1,7 @@
 :root {
   transition: background-color 300ms ease-in-out;
   --ingredients-form-container-width: 500px;
+  overflow: hidden;
 }
 
 /* UTILS */
